--- a/TimeTracker.API/appsettings.json
+++ b/TimeTracker.API/appsettings.json
@@ -1,5 +1,5 @@
 {
-"ConnectionStrings": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\dev;Database=TimeTrakerDb;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Logging": {
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSecurityKey" : "This is the time for all fish to come to sea. So long and thanks for all the Fish!!",
+  "JwtIssuer" : "https://localhost",
+  "JwtAudience" :"https://localhost",
+  "JwtExpiryInDays" : 1
 }
